--- a/src/style/card.css
+++ b/src/style/card.css
@@ -1,6 +1,6 @@
 .card-section {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(3, 1fr); /* 3 cards por linha */
   gap: 20px;
   padding: 20px;
   width: calc(100% - 40px);
@@ -9,15 +9,9 @@
 
 .flight-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(3, 1fr); /* 3 cards por linha */
   gap: 20px;
   padding: 20px;
-}
-
-.starsearch-logo {
-  width: 50px; 
-  height: auto; 
-  margin-right: 500px;
 }
 
 .card {
@@ -33,6 +27,10 @@
   transition: transform 0.3s;
   margin: 0;
   width: 100%;
+}
+
+.starsearch-logo {
+  width: 10%;
 }
 
 .card-header {
@@ -64,13 +62,9 @@
 
 .card:hover {
   transform: scale(1.05);
-} 
-
-.card img {
-  align-self: flex-end;
-  margin-left: 10px; 
 }
 
+/* Flex utilities */
 .flex {
   display: flex; 
 }
@@ -83,25 +77,10 @@
   align-items: center; 
 }
 
-.card:hover {
-  transform: scale(1.05);
-}
-
 .card-img {
   width: 100%;
   border-radius: 10px;
   height: auto;
-}
-
-.card h3 {
-  font-size: 1.2em;
-  margin: 10px 0;
-}
-
-.card p {
-  font-size: 0.9em;
-  color: #555;
-  margin: 5px 0;
 }
 
 .slick-slide {
@@ -116,15 +95,15 @@
   padding: 20px; 
 }
 
-
+/* Estilos responsivos para telas menores */
 @media (max-width: 1024px) {
   .card-section, .flight-list {
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr); /* 2 cards por linha em telas médias */
   }
 }
 
 @media (max-width: 768px) {
   .card-section, .flight-list {
-    grid-template-columns: repeat(1, 1fr); 
+    grid-template-columns: repeat(1, 1fr); /* 1 card por linha em telas pequenas */
   }
 }
